# Sivpncepat2

./: .gitmodules  AGENTS.md  APK_INFO.md  AUDIT.md  BUILD_GUIDE.md  HEV_TUNNEL_SSH_INTEGRATION_GUIDE.md  JNI_LIBSSH_SETUP.md  PANDUAN_AGEN_AI_PROYEK.md  PANDUAN_REFACTOR.md  PROGRESS_MAP.md  build.gradle.kts  compile-hevtun.sh  compile-libssh2.sh  debug.keystore.base64  export_import_code.txt  file.md  hev_socks5_tunnel_jni.txt  metadata.json  test_macro.c
.github/workflows/: Gemini.yml  build-bebas-merdeka.yml  build.yml  buildlissh.yml  gemini.yml  hapusubmodulibssh2.yml  pasang-submodule-hev.yml  pasangmbedtls.yml  pasangsubmodulibssh2.yml  syncbranch.yml
app/: build.gradle.kts
app/src/androidTest/java/com/sivpn/cepat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libssh2_config.h  native-ssh-jni.c
app/src/main/java/com/sivpn/cepat/: MainActivity.kt  TProxyService.kt
app/src/main/java/com/sivpn/cepat/model/: DialogUiState.kt  MainUiState.kt  SpeedInfo.kt
app/src/main/java/com/sivpn/cepat/monitor/: PingMonitor.kt  PublicIpMonitor.kt  SpeedMonitor.kt
app/src/main/java/com/sivpn/cepat/parser/: ProxyParser.kt  SshParser.kt
app/src/main/java/com/sivpn/cepat/repository/: ConfigRepository.kt  LogRepository.kt  SettingsRepository.kt
app/src/main/java/com/sivpn/cepat/ui/: MainScreen.kt  MainScreenDialogs.kt
app/src/main/java/com/sivpn/cepat/ui/components/: ConnectionCard.kt  DnsCard.kt  JniWarningCard.kt  KillSwitchCard.kt  LogCard.kt  PayloadCard.kt  ProfileCard.kt  ProxyCard.kt  SectionHeader.kt  SettingsCard.kt  SplitTunnelingCard.kt  SshCard.kt  StatusCard.kt  TopBar.kt  VpnItemCard.kt
app/src/main/java/com/sivpn/cepat/ui/dialogs/: DnsDialog.kt  JniDownloaderDialog.kt  LogDialog.kt  PayloadDialog.kt  ProfileDialog.kt  ProxyDialog.kt  SettingsDialog.kt  SplitTunnelDialog.kt  SshDialog.kt  TetherDialog.kt  TimeLimitDialog.kt
app/src/main/java/com/sivpn/cepat/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/sivpn/cepat/viewmodel/: DialogViewModel.kt  MainViewModel.kt  MainViewModelFactory.kt
app/src/main/java/com/sivpn/cepat/vpn/: ConnectionManager.kt  HotshareClientManager.kt  HotshareWakeLockManager.kt  HttpPayloadEngine.kt  HttpProxyServer.kt  JniLibHelper.kt  LocalPortForwarder.kt  LogManager.kt  NativeSshTunnel.kt  PayloadFormatter.kt  PayloadInjector.kt  PingUtility.kt  QrCodeGenerator.kt  RootHotspotManager.kt  SiVpnService.kt  SquidProxyEngine.kt  SslEngine.kt  StreamForwarder.kt  SystemInfoHelper.kt  VpnController.kt  VpnSettingsManager.kt  WebSocketEngine.kt  WebSocketFramer.kt
app/src/main/java/com/sivpn/cepat/vpn/service/: HevTunnelConfigurator.kt  VpnInterfaceConfigurator.kt  VpnMonitors.kt  VpnNotificationManager.kt
app/src/main/jniLibs/: README.md
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/sivpn/cepat/: ExampleRobolectricTest.kt  ExampleUnitTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
